💄 - fixed spacing style on artist section, added rotate on text

--- a/style.css
+++ b/style.css
@@ -196,7 +196,6 @@ p {
   background-color: #e4c1f9;
   position: relative;
   --cover-size: clamp(200px, 30vw, 30vh);
-  /* --cover-size: calc(100vw / 3); */
   display: grid;
   position: relative;
   height: max-content;
@@ -223,18 +222,20 @@ p {
   height: 100vh;
   width: 100vw;
   overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .cards {
   box-sizing: border-box;
   white-space: nowrap;
   width: 100vw;
-  padding-bottom: calc(30vh - (var(--cover-size) / 2));
-  height: 100vh;
+  font-size: 0;
 }
 
 .cards > li {
-  perspective: 40em;
+  perspective: 40vw;
   position: relative;
   z-index: 1;
   top: 50%;
@@ -259,15 +260,13 @@ p {
 }
 
 .cards > li > p {
-  /* border: 1px solid red; */
   text-align: center;
   margin-top: 1rem;
-  font-size: 2rem;
+  font-size: 1.5rem;
   display: flex;
   justify-content: center;
   opacity: 0;
   will-change: opacity;
-  /* width: 100vw; */
   margin: 0;
 }
 
@@ -415,7 +414,7 @@ p {
   justify-content: flex-start;
   align-items: center;
   flex-direction: column;
-  width: 95%;
+  width: 100%;
 }
 
 .listening_intro p {
@@ -739,5 +738,13 @@ circle:hover {
 
   .rec_wrapper:last-child {
     font-size: 1rem;
+  }
+
+  .cards > li > p {
+    font-size: 1.3rem;
+  }
+
+  .artists_section_title {
+    font-size: 1.2rem;
   }
 }
